--- a/cod/titanic.ipynb
+++ b/cod/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame preview:\n",
+      "     PassengerId  Survived  Pclass                                  Name  Sex  \\\n",
+      "885          886         0       3  Rice, Mrs. William (Margaret Norton)    1   \n",
+      "886          887         0       2                 Montvila, Rev. Juozas    0   \n",
+      "887          888         1       1          Graham, Miss. Margaret Edith    1   \n",
+      "889          890         1       1                 Behr, Mr. Karl Howell    0   \n",
+      "890          891         0       3                   Dooley, Mr. Patrick    0   \n",
+      "\n",
+      "      Age  SibSp  Parch  Ticket    Fare Cabin Embarked  \n",
+      "885  39.0      0      5  382652  29.125   NaN        Q  \n",
+      "886  27.0      0      0  211536  13.000   NaN        S  \n",
+      "887  19.0      0      0  112053  30.000   B42        S  \n",
+      "889  26.0      0      0  111369  30.000  C148        C  \n",
+      "890  32.0      0      0  370376   7.750   NaN        Q  \n",
+      "Column 'unSurvived' does not exist in the DataFrame.\n"
+     ]
+    }
+   ],
    "source": [
-    "A = tspsheet[['SibSp', 'Sex', 'Age']]\n",
-    "B = tspsheet['Survived']"
+    "print(\"DataFrame preview:\")\n",
+    "print(tspsheet.tail())\n",
+    "\n",
+    "# Try accessing the column safely\n",
+    "try:\n",
+    "    B = tspsheet['unSurvived']\n",
+    "except KeyError:\n",
+    "    print(\"Column 'unSurvived' does not exist in the DataFrame.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -81,19 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'TSP' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe one you\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre looking did  survive\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43munsurvival_prediction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m, in \u001b[0;36munsurvival_prediction\u001b[1;34m(SipSb, sex, age)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21munsurvival_prediction\u001b[39m(SipSb, sex, age):\n\u001b[1;32m----> 2\u001b[0m     input_data \u001b[38;5;241m=\u001b[39m \u001b[43mTSP\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSibSp\u001b[39m\u001b[38;5;124m'\u001b[39m: [SipSb], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSex\u001b[39m\u001b[38;5;124m'\u001b[39m: [sex], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m'\u001b[39m: [age]})\n\u001b[0;32m      3\u001b[0m     forecast \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mpredict(input_data)[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m forecast \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'TSP' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unSurvived\n"
      ]
     }
    ],
